--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,21 +21,29 @@
     <string name="on_boarding_image">On-boarding image</string>
     <string name="app_icon">App Icon</string>
     <string name="get_started">Get Started</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="image_of_navigation_item">Image of Navigation item</string>
+    <string name="navigation_icon">Navigation icon</string>
 
 
-    <!--Others-->
-    <string name="read_storage_permission_info">We need to be authorized to access the media files on your device</string>
+    <!--Navigation-->
     <string name="explore">Explore</string>
     <string name="songs">Songs</string>
     <string name="albums">Albums</string>
     <string name="playlist">Playlist</string>
     <string name="search">Search</string>
+    <string name="close">Close</string>
+    <string name="nav_dialog_info">You can sort it as you want</string>
+    <string name="identify_music">Identify Music</string>
+    <string name="artists">Artists</string>
+    <string name="favourites">Favourites</string>
+    <string name="genres">Genres</string>
+    <string name="radio">Radio</string>
+    <string name="settings">Settings</string>
+    <string name="videos">Videos</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--Others-->
+    <string name="read_storage_permission_info">We need to be authorized to access the media files on your device</string>
+
 
 </resources>
