--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="image_of_navigation_item">Image of Navigation item</string>
     <string name="navigation_icon">Navigation icon</string>
     <string name="track_album_art">Track album art</string>
+    <string name="album_art">Album art</string>
     <string name="more_options">More options</string>
 
 
@@ -44,19 +45,24 @@
     <string name="videos">Videos</string>
 
 
-    <!--Others-->
-    <string name="read_storage_permission_info">We need to be authorized to access the media files on your device</string>
-    <string name="recentlyPlayed">Recently Played</string>
-    <string name="empty_playlist">You have not played any song yet</string>
-    <string name="play">Play</string>
-    <plurals name="numberOfTracks">
-        <item quantity="one">%d track</item>
-        <item quantity="other">%d tracks</item>
+    <!--Plurals-->
+    <plurals name="numberOfSongs">
+        <item quantity="one">%d songs</item>
+        <item quantity="other">%d songs</item>
     </plurals>
     <plurals name="numberOfAlbums">
         <item quantity="one">%d album</item>
         <item quantity="other">%d albums</item>
     </plurals>
+
+
+    <!--Others-->
+    <string name="read_storage_permission_info">We need to be authorized to access the media files on your device</string>
+    <string name="recentlyPlayed">Recently Played</string>
+    <string name="empty_playlist">You have not played any song yet</string>
+    <string name="play">Play</string>
+    <string name="back">Back</string>
+    <string name="two_comma_separated_values">%s, %s</string>
 
 
 </resources>
