--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="track_album_art">Track album art</string>
     <string name="album_art">Album art</string>
     <string name="more_options">More options</string>
+    <string name="go_back">Go back</string>
+    <string name="enter_search_query">Enter search query</string>
 
 
     <!--Navigation-->
@@ -43,6 +45,7 @@
     <string name="radio">Radio</string>
     <string name="settings">Settings</string>
     <string name="videos">Videos</string>
+    <string name="filter_results">Filter results</string>
 
 
     <!--Plurals-->
