Properly handled navigation for items in NavigationDialogFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,8 @@
     <string name="hours">\u0020 hours</string>
     <string name="comma">,\u0020</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
