Added track bottom sheet menu to PlaybackFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="play_and_pause_button">Play and pause button</string>
     <string name="next_button">Next Button</string>
     <string name="previous_button">Previous button</string>
+    <string name="current_playing_tracks">Current playing tracks</string>
 
 
     <!--Navigation-->
