Implemented playlist model loader for Glide

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="image_of_navigation_item">Image of Navigation item</string>
     <string name="navigation_icon">Navigation icon</string>
     <string name="track_album_art">Track album art</string>
+    <string name="playlist_image">Playlist image</string>
     <string name="artist_avatar">Artist avatar</string>
     <string name="album_art">Album art</string>
     <string name="more_options">More options</string>
