--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,14 @@
         <item quantity="one">%d song</item>
         <item quantity="other">%d songs</item>
     </plurals>
+    <plurals name="numberOfSongsInAlbum">
+        <item quantity="one">%d song</item>
+        <item quantity="other">%d songs</item>
+    </plurals>
+    <plurals name="numberOfSongsSelected">
+        <item quantity="one">%d song selected</item>
+        <item quantity="other">%d songs selected</item>
+    </plurals>
     <plurals name="numberOfAlbums">
         <item quantity="one">%d album</item>
         <item quantity="other">%d albums</item>
@@ -125,6 +133,9 @@
     <string name="continue_">Continue</string>
     <string name="sth_deleted">\"%1$s\" deleted</string>
     <string name="sth_went_wrong">Oops! Something went wrong</string>
+    <string name="done">Done</string>
+    <string name="select_songs">Select Songs</string>
+    <string name="song_in_album">%1$s in %2$s</string>
 
 
 </resources>
