Implemented Glide Model Loader for Genres

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="playlist_image">Playlist image</string>
     <string name="artist_avatar">Artist avatar</string>
     <string name="album_art">Album art</string>
+    <string name="genre_art">Genre art</string>
     <string name="more_options">More options</string>
     <string name="go_back">Go back</string>
     <string name="enter_search_query">Enter search query</string>
