Basic Implementation of media browsing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,7 @@
     <string name="song_in_album">%1$s in %2$s</string>
     <string name="remove_picture">Remove picture</string>
     <string name="success">Success</string>
+    <string name="recommended">Recommended</string>
 
 
 </resources>
