Added playback indicators to some items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="success">Success</string>
     <string name="notification_channel">Now Playing</string>
     <string name="notification_channel_description">Shows what music is currently playing in Jade Player</string>
+    <string name="playing_now">Playing Now</string>
 
 
 </resources>
